# DoHoaMayTinh_BTL_Racing3D

./: CMakeLists.txt  README.md  Racing3D.cpp  SETUP_GUIDE.md
assets/textures/: placeholder.txt
include/: camera.h  car.h  config.h  game.h  hud.h  input.h  scenery.h  timer.h  track.h  window.h
src/: main.cpp
src/core/: input.cpp  timer.cpp  window.cpp
src/engine/: camera.cpp
src/game/: car.cpp  game.cpp  hud.cpp  scenery.cpp  track.cpp
